# worldcup-moneyball-analysis-tool

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  README.md  map.md
assets/: pl_player_impact_v1.json  pl_player_impact_v2.json
benches/: perf.rs
bug_reports/: commentary_missing_bug_report.md  placeholder_match_bug_report.md  rankings_cache_league_switch_bug_report.md
src/: analysis_export.rs  analysis_fetch.rs  analysis_rankings.rs  calibration.rs  elo.rs  fake_feed.rs  feed.rs  historical_dataset.rs  http_cache.rs  http_client.rs  league_params.rs  lib.rs  main.rs  odds_fetch.rs  persist.rs  pl_dataset.rs  pl_player_impact.rs  player_impact.rs  state.rs  team_fixtures.rs  upcoming_fetch.rs  win_prob.rs
tests/: analysis_rankings.rs  parsing.rs  prematch.rs  state_deltas.rs  state_rows.rs
tests/fixtures/: backtest_case.json  fotmob_matches.json  match_details.json  match_details_periods.json  player_detail.json  player_detail_rich_alpha.json  player_detail_rich_beta.json  player_detail_rich_gamma_sparse.json
