[package]
name = "wc26_terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
rand = "0.8"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
