[package]
name = "wc26_terminal"
version = "0.1.0"
edition = "2024"
default-run = "wc26_terminal"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
rand = "0.8"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rust_xlsxwriter = "0.64"
rayon = "1.11.0"
once_cell = "1.21.3"
rusqlite = { version = "0.37", features = ["bundled"] }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "perf"
harness = false
